# controller/controller.go
@@ -1,10 +1,14 @@
 package controller
 
 import (
+	"mime/multipart"
+	"os"
+	"path/filepath"
 	"peanut/pkg/apierrors"
 
 	"github.com/gin-gonic/gin"
 	"github.com/go-playground/validator/v10"
+	"github.com/google/uuid"
 )
 
 func bindJSON(ctx *gin.Context, obj interface{}) bool {
@@ -62,4 +66,21 @@ func checkError(ctx *gin.Context, err error) bool {
 	}
 	_ = ctx.Error(err).SetType(gin.ErrorTypePublic)
 	return true
+}
+
+func saveUploadedFile(ctx *gin.Context, file *multipart.FileHeader) (path string, err error) {
+	// Create folder if not exist
+	err = os.MkdirAll("./public/uploads", os.ModePerm)
+	if err != nil {
+		err = apierrors.NewErrorf(apierrors.InternalError, err.Error())
+		return
+	}
+
+	fileId := uuid.New()
+	fileName := fileId.String() + filepath.Ext(file.Filename)
+
+	path = "./public/uploads/" + fileName
+	err = ctx.SaveUploadedFile(file, path)
+
+	return
 }
